src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Other_Information__c</fullName>
        <inlineHelpText>Enter any other information. Shift patterns, Peripatetic staff (sales, engineers, trainers etc.) security checks, PPE, induction process for auditor</inlineHelpText>
        <label>Other Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Services_Used__c</fullName>
        <description>Allows capture of previously used services.  Should only be on in-company opps</description>
        <inlineHelpText>Enter details of other services used on separate lines</inlineHelpText>
        <label>Other Services Used</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PK_CB_OPP_ID__c</fullName>
        <description>This is a FK to the either Booking.BOOK_ID from the Booking table in the CB database OR a unique key representing the Subscription based on values from Member and Member_Period Tables. The PK in Salesforce will be Opportunity.Id and is generated during record creation</description>
        <inlineHelpText>This is a System Admin field</inlineHelpText>
        <label>PK_CB_OPP_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Total__c</fullName>
        <description>Paid Total (Excl. VAT)</description>
        <inlineHelpText>Paid Total (Excl. VAT)</inlineHelpText>
        <label>Paid Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Area__c</fullName>
        <description>Area address for credit card payment</description>
        <inlineHelpText>Area on payment card</inlineHelpText>
        <label>Payment Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Building__c</fullName>
        <description>Building address for credit card payment</description>
        <inlineHelpText>Building name on payment card</inlineHelpText>
        <label>Payment Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_City__c</fullName>
        <description>City on payment crad</description>
        <inlineHelpText>City on payment crad</inlineHelpText>
        <label>Payment City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Country__c</fullName>
        <description>Country on payment card</description>
        <inlineHelpText>Country on payment card</inlineHelpText>
        <label>Payment Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Postal_Code__c</fullName>
        <description>Postcode on payment card</description>
        <inlineHelpText>Postcode on Payment card</inlineHelpText>
        <label>Payment Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_State__c</fullName>
        <description>State address for credit card payment</description>
        <inlineHelpText>Area on payment card</inlineHelpText>
        <label>Payment State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Street__c</fullName>
        <description>Street address for credit card payment</description>
        <inlineHelpText>Street name on payment card</inlineHelpText>
        <label>Payment Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_protective_equipment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copied from the Lead Page for STP Course</description>
        <inlineHelpText>Copied from the Lead Page for STP Course</inlineHelpText>
        <label>Personal protective equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Services_1__c</fullName>
        <description>Allows capture of previously used services.  Should only be on in-company opps

Select services previously used</description>
        <inlineHelpText>Select services previously used</inlineHelpText>
        <label>Previous Services 1</label>
        <picklist>
            <picklistValues>
                <fullName>Combined Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Audit Pre-Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Five Star Environmental Management Systems Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Five Star Heath and Safety Management Systems Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Company Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OHSAS 18001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety Audit Pre-Assessment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Services_2__c</fullName>
        <description>Allows capture of previously used services.  Should only be on in-company opps</description>
        <inlineHelpText>Select services previously used</inlineHelpText>
        <label>Previous Services 2</label>
        <picklist>
            <picklistValues>
                <fullName>Five Star Heath and Safety Management Systems Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety Audit Pre-Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combined Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Company Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Five Star Environmental Management Systems Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Audit Pre-Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OHSAS 18001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Advisory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Services_3__c</fullName>
        <description>Allows capture of previously used services.  Should only be on in-company opps</description>
        <inlineHelpText>Select services previously used</inlineHelpText>
        <label>Previous Services 3</label>
        <picklist>
            <picklistValues>
                <fullName>Combined Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Audit Pre-Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Five Star Environmental Management Systems Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Five Star Heath and Safety Management Systems Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Company Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OHSAS 18001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety Audit Pre-Assessment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Subscription_Type__c</fullName>
        <description>Indicates the Type, for Subscription Renewal Opportunities, based on the Subscription Initiating Renewal</description>
        <formula>IF(
	ISBLANK(Subscription_Initiating_Renewal__c),
	NULL,
	IF(
		AND(
			Subscription_Initiating_Renewal__r.Includes_Membership_Product__c =TRUE,
			Subscription_Initiating_Renewal__r.Includes_RCP_Product__c =TRUE),
		&quot;Complex&quot;,
		IF(
			Subscription_Initiating_Renewal__r.Includes_Membership_Product__c =TRUE,
			&quot;Membership&quot;,
			IF(
				Subscription_Initiating_Renewal__r.Includes_RCP_Product__c =TRUE,
				&quot;RCP&quot;,
				&quot;Subscription&quot;))))</formula>
        <inlineHelpText>Indicates the Type, for Subscription Renewal Opportunities, based on the Subscription Initiating Renewal</inlineHelpText>
        <label>Previous Subscription Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Training_and_Knowledge__c</fullName>
        <inlineHelpText>What previous training, qualifications, experience or knowledge do delegates have in relative to course</inlineHelpText>
        <label>Previous Training and Knowledge</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Price_Approval_Given__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price Approval Given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Notes__c</fullName>
        <inlineHelpText>Sales notes to Sales manager for details of pricing</inlineHelpText>
        <label>Pricing Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Principles_of_manual_handling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copied from the Lead Page for STP Course</description>
        <inlineHelpText>Copied from the Lead Page for STP Course</inlineHelpText>
        <label>Manual Handling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prod_Dev_Code__c</fullName>
        <label>Prod Dev Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_Dev_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prod Dev Involved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Delivered__c</fullName>
        <description>Denotes whether the product has been delivered</description>
        <inlineHelpText>Has the product or service been delivered?</inlineHelpText>
        <label>Product Delivered</label>
        <picklist>
            <picklistValues>
                <fullName>Fully delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not delivered – no commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not delivered – signed commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subs: Credit agreed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proforma_exists__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If ticked one or more proformas (un-posted invoices, &apos;In progress&apos; invoices) exist for this opportunity.</inlineHelpText>
        <label>Proforma exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Reference__c</fullName>
        <inlineHelpText>Customer PO number, if applicable</inlineHelpText>
        <label>Purchase Order Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCP_Subscription_Products__c</fullName>
        <description>Count of product lines which are associated with RCP subscriptions</description>
        <inlineHelpText>Count of product lines which are associated with RCP subscriptions</inlineHelpText>
        <label>RCP Subscription Products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Subscription_Product_Type__c</field>
            <operation>equals</operation>
            <value>RCP</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Renewal_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact to whom renewal reminders are sent (auto populated on creation of subscription renewal opportunities)</inlineHelpText>
        <label>Renewal Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If ticked, this box indicates that the opportunity has been created automatically as a subscription is up for renewal</description>
        <inlineHelpText>If ticked, this box indicates that the opportunity has been created automatically as a subscription is up for renewal</inlineHelpText>
        <label>Renewal Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Reminders__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether reminders should be sent for subscription renewals</inlineHelpText>
        <label>Renewal Reminders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Credit_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this box if you wish to request a credit note to be created for the latest invoice.  Once you have ticked this you must submit for approval.</inlineHelpText>
        <label>Request Credit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copied from the Lead Page for STP Course</description>
        <inlineHelpText>Copied from the Lead Page for STP Course</inlineHelpText>
        <label>Risk Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rollover_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If ticked, this box indicates an opportunity has been created from partial closure of a public events opportunity</description>
        <inlineHelpText>If ticked, this box indicates an opportunity has been created from partial closure of a public events opportunity</inlineHelpText>
        <label>Rollover Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SM_Price_Needed_Products__c</fullName>
        <label>SM Price Needed Products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.SM_Price_Needed__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SUL_Subscription_Products__c</fullName>
        <description>Count of product lines which are associated to Service Under Licence subscriptions</description>
        <inlineHelpText>Count of product lines which are associated to Service Under Licence subscriptions</inlineHelpText>
        <label>SUL Subscription Products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Subscription_Product_Type__c</field>
            <operation>equals</operation>
            <value>Service Under Licence</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Safety_of_work_equipment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copied from the Lead Page for STP Course</description>
        <inlineHelpText>Copied from the Lead Page for STP Course</inlineHelpText>
        <label>Safe Use of Work Equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Approved_Deliverer__c</fullName>
        <description>This is for Sales Managers to enter the name of the original trainer/auditor that the price is originally based on so that any changes to the price can be tracked</description>
        <inlineHelpText>This is for Sales Managers to enter the name of the original trainer/auditor that the price is originally based on so that any changes to the price can be tracked</inlineHelpText>
        <label>Sales Manager Approved Deliverer</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipped_On__c</fullName>
        <description>Used by marketing to mark a opportunity as shipped</description>
        <inlineHelpText>Date the Product was shipped out</inlineHelpText>
        <label>Shipped On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_Account_Name__c</fullName>
        <label>Shipping Address Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_Building__c</fullName>
        <label>Shipping Address Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Area__c</fullName>
        <label>Shipping Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact_Email__c</fullName>
        <externalId>true</externalId>
        <label>Shipping Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact_Name__c</fullName>
        <label>Shipping Contact Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Job_Title__c</fullName>
        <label>Shipping Job Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Postal_Code__c</fullName>
        <label>Shipping Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebosh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone / email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription_Contract_End_Date__c</fullName>
        <description>Original End Date of LMS contract</description>
        <inlineHelpText>Insert the contract start date if this is a new contract</inlineHelpText>
        <label>Subscription Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Contract_Start_Date__c</fullName>
        <description>Start Date of LMS contract</description>
        <inlineHelpText>Insert the contract start date if this is a new contract</inlineHelpText>
        <label>Subscription Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Duration_Count__c</fullName>
        <label>Subscription Duration Count</label>
        <summarizedField>OpportunityLineItem.Duration_Years__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Subscription_Product__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subscription_Initiating_Renewal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to subscription that generates this opp</description>
        <label>Subscription Initiating Renewal</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Opportunities Generated by Renewal</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Manager__c</fullName>
        <description>TEMP- for checking Opportunity assignment</description>
        <formula>Subscription_Initiating_Renewal__r.Subscription_Manager__r.FirstName +&quot; &quot; +  Subscription_Initiating_Renewal__r.Subscription_Manager__r.LastName</formula>
        <inlineHelpText>TEMP- for checking Opportunity assignment</inlineHelpText>
        <label>Subscription Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Notice_Period_Days__c</fullName>
        <description>Number of days notice period customer has to give to cancel subscription contract</description>
        <inlineHelpText>Enter in days the notice period a customer has to give to cancel subscription contract</inlineHelpText>
        <label>Subscription Notice Period (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Product_Count__c</fullName>
        <label>Subscription Product Count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Subscription_Product__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The subscription that needs to be altered.</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Opportunities (Subscription)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEMP_Anomaly__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Temporary field to indicate if figures differ from sales report</inlineHelpText>
        <label>TEMP - Anomaly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMP_Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Temporary field for checking monthly figures</inlineHelpText>
        <label>TEMP - Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_C_Price_Variation_Products__c</fullName>
        <label>T/C Price Variation Products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.T_C_Price_Variation__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>T_C_Variation_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T/C Variation Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FinancialForce does not use this field when creating invoices but the field on the account. This is used so that Finance can manually change the account output tax rate to create the invoice and then change it back after.</description>
        <inlineHelpText>The output VAT Tax Code. This defaults to the value on the account when the opportunity is first created. If this opportunity needs (eg) to be zero rated but the account VAT code needs to be kept the same change this.</inlineHelpText>
        <label>Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Temp_No_value_to_invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a temporary field for Deinma to tick when he&apos;s discovered a part invoiced or part paid opportunity where the outstanding amount is £0 - for finance to update only.</description>
        <inlineHelpText>This is a temporary field for Deinma to tick when he&apos;s discovered a part invoiced or part paid opportunity where the outstanding amount is £0 - for finance to update only.</inlineHelpText>
        <label>Temp - No value to invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temp_RCP_Prod_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used for Ryan to id opps created to update rcp prods</inlineHelpText>
        <label>Temp RCP Prod Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temp_Subscription_Fname__c</fullName>
        <description>pulls in the contact&apos;s first name where related to the previous subscription</description>
        <formula>Subscription_Initiating_Renewal__r.Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls in the contact&apos;s first name where related to the previous subscription</inlineHelpText>
        <label>Temp Subscription Fname</label>
        <type>Text</type>
    </fields>
</CustomObject>